# v3.8:
  * Support more platforms, currently supports: arm64, armv7, armhf, riscv64, i386, loong64, s390x, ppc64le and x86_64.
  * Fix crash on capget().
  * General bug fixes.
# v3.7:
  * Ruri can now recognize [COMMAND [ARGS]...] without absolute path.
  * Add `-f` option: fork() before exec the command in container.
  * Add `-P` option: show process info.
  * Add `-j` option: just chroot, do not create /dev, /proc and /sys.
  * Fix unshare container joining ns.
  * Use pivot_root(2) instead of chroot(2) in unshare and rootless container.
  * Update masked dirs/files.
  * Update easter egg: `ruri AwA`.
  * Add debian packege info.
  * General bug fixes.
# v3.6:
  * Add `uidmap` suid binary support, to fix setgroup() failed in rootless container.
  * ruri can now recognize CONTAINER_DIR path start without `.` or `/`.
  * `-q` option can now use qemu path on host.
  * Support architecture aliases for `-a` option (e.g. arm64=>aarch64).
  * General bug fixes.
# v3.5:
  * Capability can now be controled by value.
  * Support mount files to container.
  * General bug fixes.
# v3.4:
  * Default command wil be /bin/sh if /bin/su does not exist.
  * Fix mount image file.
  * Fix block device as root.
  * Fix configure script.
  * General bug fixes.
# v3.3:
  * Add github action, you can now download static binary.
  * Fix configure script.
  * Fix CAP_LAST_CAP.
  * Update libk2v.
  * Add comments in configs.
  * General bug fixes.
# v3.2:
  * Fix mountpoint in rootless container.
  * General bug fixes.
# v3.1:
  * Make .rurienv immutable.
  * Drop CapAmb && Clear CapInh.
  * Add cgroup support for cpuset and memory.
  * Add `-l` option: `--limit`.
  * Update seccomp profile.
  * Add a configure script.
  * General bug fixes.
# v3.0:
  * Remove daemon support.
  * Use libk2v for config files and .rurienv file.
  * Remove old `-d` `-D` `-K` `-l` `-t` `-T` option.
  * Add long args support.
  * `-d` option now aliases to `--drop`.