@@ -160,7 +160,13 @@ ruri -l memory=1M -l cpuset=1 /test
 ```      
 unshare容器和rootless容器会始终在执行命令前fork()自身一次，     
 使用此选项使普通chroot容器拥有相同行为.     
+************************
 ```
 -j, --just-chroot ...........................: 仅chroot，不创建/dev，/sys和/proc
 ```
 使用此选项避免ruri创建/dev，/sys和/proc。
+*******************
+```
+-W, --work-dir ..............................: 更改容器中的工作目录，默认是/
+```
+出于兼容性考虑，增加此选项。
