@@ -101,6 +101,9 @@ static char *build_container_info(const struct CONTAINER *_Nonnull container)
 	// Just chroot.
 	ret = k2v_add_comment(ret, "Just chroot, do not create runtime dirs.");
 	ret = k2v_add_config(bool, ret, "just_chroot", container->just_chroot);
+	// work_dir.
+	ret = k2v_add_comment(ret, "Work directory.");
+	ret = k2v_add_config(char, ret, "work_dir", container->work_dir);
 	// extra_mountpoint.
 	for (int i = 0; true; i++) {
 		if (container->extra_mountpoint[i] == NULL) {
@@ -280,6 +283,8 @@ struct CONTAINER *read_info(struct CONTAINER *_Nullable container, const char *_
 	container->container_id = k2v_get_key(int, "container_id", buf);
 	// Get just_chroot.
 	container->just_chroot = k2v_get_key(bool, "just_chroot", buf);
+	// Get work_dir.
+	container->work_dir = k2v_get_key(char, "work_dir", buf);
 	// Get env.
 	int envlen = k2v_get_key(char_array, "env", buf, container->env, MAX_ENVS);
 	container->env[envlen] = NULL;
